2回めコミット

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <nav>
        <div id="navigation">
           <div id="home">
-            <a href="MyProfile.html">MyProfile</a>
+            <a href="index.html">MyProfile</a>
           </div>
           <div id="index">
-            <a href="MyProfile.html#about">About</a>
-            <a href="MyProfile.html#works">Works</a>
+            <a href="index.html#about">About</a>
+            <a href="index.html#works">Works</a>
           </div>
         </div>
       </nav>
